package W01.S181860072.src;

public class Elixir extends Being{
    protected int defense;
    public Elixir(){
        defense=100;
    }
    public void twinkling(){
        System.out.println(this+": *闪*闪*发*光*");
    }
}
